[project]
name = "ml"
version = "0.1.0"
description = ""
authors = [
    {name = "tmgkz",email = "tumugikaze@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.18.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
